// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0AiProposalCard Snapshot - hidden actions 1`] = `
<View
  className="overflow-hidden rounded-xl border border-f0-border-secondary bg-f0-background"
>
  <View
    className="flex-row items-center gap-3 px-4 py-3"
  >
    <View
      accessibilityRole="image"
      className="relative flex shrink-0 items-center justify-center h-5 w-5"
    >
      <RNSVGSvgView
        align="none"
        bbHeight="100%"
        bbWidth="100%"
        className="absolute h-full w-full"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={100}
        vbWidth={100}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -51874,
                  0.44,
                  -51874,
                  1,
                  -2740913,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="gradient-_r_1_"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M50,0 C43,0 36,0 30,1 23,2 17,5 12,9 5,16 1,25 0,36 0,43 0,57 0,64 1,75 5,84 12,91 17,95 23,98 30,99 36,100 43,100 50,100 57,100 64,100 70,99 77,98 83,95 88,91 95,84 99,75 100,64 100,57 100,43 100,36 99,25 95,16 88,9 83,5 77,2 70,1 64,0 57,0 50,0"
            fill={
              {
                "brushRef": "gradient-_r_1_",
                "type": 1,
              }
            }
            matrix={
              [
                0.95,
                0,
                0,
                0.95,
                2.375,
                2.375,
              ]
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={10}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        className="absolute inset-0 items-center justify-center z-10 h-5 w-5"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="100%"
          bbWidth="100%"
          className="relative text-f0-foreground-inverse h-[14px] w-[14px]"
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              [
                {},
              ],
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M4 12a8 8 0 1 1 16 0 8 8 0 0 1-16 0m11.338-2.592a.8.8 0 0 1 .054 1.13l-4 4.4a.8.8 0 0 1-1.158.028l-1.6-1.6a.8.8 0 0 1 1.132-1.132l1.006 1.007 3.436-3.78a.8.8 0 0 1 1.13-.053"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      className="min-w-0 flex-1"
    >
      <Text
        className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Review before creating
      </Text>
      <Text
        className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-normal text-f0-foreground-secondary text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Customer Support · IT Support
      </Text>
    </View>
  </View>
  <View
    className="gap-2 px-4 py-3"
  >
    <Text
      className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
    >
      Laptop screen flickering on battery
    </Text>
    <Text
      className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-normal text-f0-foreground text-left"
    >
      The screen flickers only when the laptop runs on battery. It stops as soon as the charger is plugged in. The user already updated the graphics drivers without any success.
    </Text>
  </View>
</View>
`;

exports[`F0AiProposalCard Snapshot - with actions 1`] = `
<View
  className="overflow-hidden rounded-xl border border-f0-border-secondary bg-f0-background"
>
  <View
    className="flex-row items-center gap-3 px-4 py-3"
  >
    <View
      accessibilityRole="image"
      className="relative flex shrink-0 items-center justify-center h-5 w-5"
    >
      <RNSVGSvgView
        align="none"
        bbHeight="100%"
        bbWidth="100%"
        className="absolute h-full w-full"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={100}
        vbWidth={100}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -51874,
                  0.44,
                  -51874,
                  1,
                  -2740913,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="gradient-_r_0_"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M50,0 C43,0 36,0 30,1 23,2 17,5 12,9 5,16 1,25 0,36 0,43 0,57 0,64 1,75 5,84 12,91 17,95 23,98 30,99 36,100 43,100 50,100 57,100 64,100 70,99 77,98 83,95 88,91 95,84 99,75 100,64 100,57 100,43 100,36 99,25 95,16 88,9 83,5 77,2 70,1 64,0 57,0 50,0"
            fill={
              {
                "brushRef": "gradient-_r_0_",
                "type": 1,
              }
            }
            matrix={
              [
                0.95,
                0,
                0,
                0.95,
                2.375,
                2.375,
              ]
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeWidth={10}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        className="absolute inset-0 items-center justify-center z-10 h-5 w-5"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="100%"
          bbWidth="100%"
          className="relative text-f0-foreground-inverse h-[14px] w-[14px]"
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              [
                {},
              ],
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M4 12a8 8 0 1 1 16 0 8 8 0 0 1-16 0m11.338-2.592a.8.8 0 0 1 .054 1.13l-4 4.4a.8.8 0 0 1-1.158.028l-1.6-1.6a.8.8 0 0 1 1.132-1.132l1.006 1.007 3.436-3.78a.8.8 0 0 1 1.13-.053"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      className="min-w-0 flex-1"
    >
      <Text
        className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Review before creating
      </Text>
      <Text
        className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-normal text-f0-foreground-secondary text-left"
        ellipsizeMode="tail"
        numberOfLines={1}
      >
        Customer Support · IT Support
      </Text>
    </View>
  </View>
  <View
    className="gap-2 px-4 py-3"
  >
    <Text
      className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
    >
      Laptop screen flickering on battery
    </Text>
    <Text
      className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-normal text-f0-foreground text-left"
    >
      The screen flickers only when the laptop runs on battery. It stops as soon as the charger is plugged in. The user already updated the graphics drivers without any success.
    </Text>
  </View>
  <View
    className="flex-row items-center justify-end gap-3 border-t border-f0-border-secondary px-4 py-3"
  >
    <View
      className="flex items-start"
    >
      <View
        accessibilityLabel="Confirm"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="overflow-hidden rounded"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            undefined,
          ]
        }
      >
        <View
          className="absolute inset-0"
          pointerEvents="none"
          style={
            [
              {
                "opacity": 0,
              },
              {
                "backgroundColor": "rgba(0, 0, 0, 1)",
              },
            ]
          }
        />
        <View
          className="relative flex-row items-center justify-center border-none grow-0 bg-f0-background-accent-bold h-9 rounded gap-1 pl-2 pr-3"
        >
          <View
            className="opacity-100"
            testID="f0-button-content"
          >
            <View
              className="flex-row items-center justify-center gap-1"
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="100%"
                bbWidth="100%"
                className="shrink-0 w-6 h-6 stroke-lg text-f0-icon-inverse"
                fill="none"
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": "100%",
                      "width": "100%",
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M12.006 4.836a.9.9 0 0 1 .9.9v5.37h5.37a.9.9 0 0 1 0 1.8h-5.37v5.37a.9.9 0 0 1-1.8 0v-5.37h-5.37a.9.9 0 0 1 0-1.8h5.37v-5.37a.9.9 0 0 1 .9-.9"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <Text
                className="no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-inverse text-left"
              >
                Confirm
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
